WIP #4 - unfinished (updating about css,html)

--- a/about.html
+++ b/about.html
@@ -38,11 +38,7 @@
     <div class="content-wrapper">
         <main>
             <h2>About the Project</h2>
-            <p>Chuck Norris can 'strangle' you with a cordless phone. When Chuck Norris gives you the finger, he's
-                telling you how many seconds you have left to live. Chuck Norris can kill your imaginary friends. On New
-                Year's Eve, Chuck Norris promised that he'd lose 20 pounds. The next morning he shaved his chest and
-                smiled as he
-                realized that he'd lost 30. Chuck Norris threw a grenade and killed 50 people. Then it exploded.</p>
+            <p>Chuck Norris once shattered the space-time continuum. He felt so bad, he put it back together. Chuck Norris found the last digit of pi. Chuck Norris once won an underwater breathing contest. With a fish. Chuck Norris does not use spell check. If he happens to misspell a word, Oxford will change the spelling. Chuck Norris lost his virginity before his dad did.</p>
         </main>
 
         <section>
