WIP #4 - changed color scheme to match Figma

--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes.</p>
+                        <p>Favorite cocktail:</p>
                     <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
