WIP #4 - updated card button styles, padding; added p-bold class

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes.</p>
-                        <p>Favorite cocktail:</p>
+                        <p class="p-bold">Favorite cocktail:</p>
                     <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
@@ -63,6 +63,7 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes.</p>
+                        <p class="p-bold">Favorite cocktail:</p>
                     <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
@@ -73,7 +74,8 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes.</p>
-                    <a href="#"><button type="submit">Old Fashioned</button></a>
+                        <p class="p-bold">Favorite cocktail:</p>
+                    <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
@@ -83,13 +85,17 @@
                     <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
                         minutes
                         to watch 60 Minutes.</p>
-                    <a href="#"><button type="submit">Whiskey Sour</button></a>
+                        <p class="p-bold">Favorite cocktail:</p>
+                    <a href="#"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
             </div>
         </section>
     </div>
+    <footer>
+        <p class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</p>
+    </footer>
     <script src="./scripts/script.js"></script>
 </body>
 
