--- a/quiz.html
+++ b/quiz.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <main>
-        <div id="quiz-container">
+        <form id="quiz-container">
             <div class="quiz-title">
             <h1>Which Cocktail Are You?</h1>
             </div>
@@ -46,10 +46,10 @@
             <div id="result-container">
               <!-- Result and description will be displayed here -->
             </div>
-          </div>
+          </form>
           
     </main>
-    <script src="./scripts/script.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
     <script src="./scripts/quiz.js"></script>
 </body>
 </html>
