--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
 <body>
     <header>
         <a class="logo" href="./index.html">THE COCKTAIL CACHE</a>
+        <p id="mobile-menu-btn">&#9776;</p>
         <nav>
-            <a href="./browse.html">BROWSE</a>
-            <a href="./quiz.html">QUIZ</a>
-            <a id="random-cocktail-nav-btn">RANDOM</a>
+            <div class="nav-link-container">
+                <a href="./browse.html">BROWSE</a>
+                <a href="./quiz.html">QUIZ</a>
+                <a id="random-cocktail-nav-btn">RANDOM</a>
+                <a class="last-nav-button" href="./about.html">ABOUT</a>
+            </div>
             <form class="search-container">
                 <div class="search-bar nav-search-bar">
                     <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
@@ -31,6 +35,7 @@
                 </div>
             </form>
         </nav>
+        <div class="mobile-menu-bg-screen"></div>
     </header>
 
     <div id="loading-screen" class="fullscreen-responsive">
@@ -42,7 +47,7 @@
     <main id="index-page" class="fullscreen-responsive">
         <div class="main-container">
             <form class="main-search-container">
-                <div class="search-bar">
+                <div class="search-bar index-search-bar">
                     <div class="decorative-search-border"></div>
                     <input type="text" id="main-search-input" placeholder="SEARCH FOR A COCKTAIL">
                     <button id="main-search-btn"><img src="./assets/search_icon_accent_yellow.svg"></button>
@@ -52,15 +57,15 @@
             </form>
             <p>OR</p>
             <div class="btns-container">
-                <button class="homepage-btn">BROWSE ALL COCKTAILS</button>
-                <button class="homepage-btn">FIND YOUR COCKTAIL MATCH</button>
+                <button class="homepage-btn" id="browse-index-btn">BROWSE ALL COCKTAILS</button>
+                <button class="homepage-btn" id="quiz-index-btn">FIND YOUR COCKTAIL MATCH</button>
                 <button class="homepage-btn">DISCOVER A RANDOM COCKTAIL</button>
             </div>
         </div>
     </main>
 
     <footer>
-        <p class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</p>
+        <a href="./about.html" class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</a>
     </footer>
 
     <script src="./scripts/script.js"></script>
