fixed ID typo: ingreditents in JS & HTML

--- a/browse.html
+++ b/browse.html
@@ -53,9 +53,9 @@
                 <i class="fas fa-chevron-circle-down" id="arrow2"></i>
             </div>
             <div class="filter-container">
-                <div class="ingreditents-options filter-options">
+                <div class="ingredients-options filter-options">
                     <strong>INGREDIENTS</strong>
-                    <div class="selection-container" id="ingreditents">
+                    <div class="selection-container" id="ingredients">
                         <div class="ingredient-container"><p>INGREDIENT</p></div>
                     </div>
                 </div>
