--- a/quiz.html
+++ b/quiz.html
@@ -58,8 +58,8 @@
           </form>
           
     </main>
-    <!-- <script src="./scripts/script.js"></script> -->
-    <script src="./scripts/quiz.js"></script>
+    <script src="./scripts/script.js"></script>
+    <!-- <script src="./scripts/quiz.js"></script> -->
 </body>
 
 </html>
