WIP #30 - removed HREF from navbar a tag

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <a href="./browse.html">BROWSE</a>
             <a href="./quiz.html">QUIZ</a>
-            <a href="" id="random-cocktail-nav-btn" onclick="showRandom()">RANDOM</a>
+            <a id="random-cocktail-nav-btn" onclick="showRandom()">RANDOM</a>
             <form class="search-container">
                 <div class="search-bar nav-search-bar">
                     <input type="text" id="nav-search-input" placeholder="SEARCH FOR A COCKTAIL">
