WIP #34 - adding event listeners for random nav & index buttons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="btns-container">
                 <button class="homepage-btn" id="browse-index-btn">BROWSE ALL COCKTAILS</button>
                 <button class="homepage-btn" id="quiz-index-btn">FIND YOUR COCKTAIL MATCH</button>
-                <button class="homepage-btn">DISCOVER A RANDOM COCKTAIL</button>
+                <button class="homepage-btn" id="random-index-btn">DISCOVER A RANDOM COCKTAIL</button>
             </div>
         </div>
     </main>
