WIP #35 - gave about page a title in header

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title>The Cocktail Cache - About the Project</title>
+    <title>About the Cocktail Cache</title>
 </head>
 
 <body>
