--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="btns-container">
                 <button class="homepage-btn">BROWSE ALL COCKTAILS</button>
                 <button class="homepage-btn">FIND YOUR COCKTAIL MATCH</button>
-                <button class="homepage-btn">DISCOVER A RANDOM COCKTAIL</button>
+                <button class="homepage-btn" id="discover-btn">DISCOVER A RANDOM COCKTAIL</button>
             </div>
         </div>
     </main>
