Updated Footer Message

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
         </section>
     </div>
     <footer>
-        <p class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</p>
+        <p class="p-small">THE COCKTAIL CACHE, EST. 2023</p>
     </footer>
     <script src="./scripts/script.js"></script>
 </body>
