--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-        <a href="./about.html" class="p-small">THE COCKTAIL CACHE, DEVELOPED BY 'TEAM-NAME' 2023</a>
+        <a href="./about.html" class="p-small">THE COCKTAIL CACHE, EST. 2023</a>
     </footer>
 
     <script src="./scripts/script.js"></script>
