General Spelling Corrections

--- a/browse.html
+++ b/browse.html
@@ -71,7 +71,7 @@
                         <p id="complexity-message">FILTER OFF</p>
                     </div>
                     <strong>ALCOHOLIC</strong>
-                    <div class="selection-container" id="alcoholic-choises">
+                    <div class="selection-container" id="alcoholic-choices">
                         <input type="radio" id='contains-alcohol' name="alcoholic-filter-option">
                         <label for="contains-alcohol">OF COURSE!</label><br>
                         <input type="radio" id='no-contains-alcohol' name="alcoholic-filter-option">
