WIP #10 - added footer content, styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title></title>
+    <title>The Cocktail Cache</title>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-        <a href="./about.html" class="p-small">THE COCKTAIL CACHE, EST. 2023</a>
+        <p><a href="./about.html">&#0169;2023 THE COCKTAIL CACHE. ALL RIGHTS RESERVED.</a></p>
     </footer>
 
     <script src="./scripts/script.js"></script>
