Finished #10 - content, links, associated css added

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title>About the Cocktail Cache</title>
+    <title>About The Cocktail Cache</title>
 </head>
 
 <body>
@@ -47,8 +47,7 @@
     <div class="content-wrapper">
         <main>
             <h2>About the Project</h2>
-            <p>Chuck Norris once shattered the space-time continuum. He felt so bad, he put it back together. Chuck Norris found the last digit of pi. Chuck Norris once won an underwater breathing contest. With a fish. Chuck Norris does not use spell check. If he happens to misspell a word, Oxford will change the spelling. Chuck Norris lost his virginity before his dad did.</p>
-        </main>
+            <p>The Cocktail Cache is a team-built website that uses HTML5, CSS3, and JS ES6. It utilizes data from the CocktailDB web API pulling information about various drinks, ingredients, and recipes from a third-party database, the CocktailDB API.</p>
 
         <section>
             <h2>Meet the Team</h2>
@@ -56,46 +55,43 @@
             <div class="team-card-container">
 
                 <div class="team-card">
-                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
-                    <h3>Art van de Lay</h3>
-                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
-                        minutes
-                        to watch 60 Minutes.</p>
+                    <img src="./assets/img/member-ts.jpg" alt="Taylor">
+                    <h3>Taylor</h3>
+                    <p>const momCodes = <br>['Eat', 'Sleep', 'Parent', 'CODE'];</p>
                         <p class="p-bold">Favorite cocktail:</p>
-                    <a href="#"><button type="submit">Mojito</button></a>
+                    <a href="./details.html?id=17212"><button type="submit">Espresso Martini</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
                 <div class="team-card">
-                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
-                    <h3>Art van de Lay</h3>
-                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
-                        minutes
-                        to watch 60 Minutes.</p>
+                    <img src="./assets/img/member-cs.jfif" alt="Cris">
+                    <h3>Cris</h3>
+                    <p>&ldquo;What's next?&rdquo;</p>
                         <p class="p-bold">Favorite cocktail:</p>
-                    <a href="#"><button type="submit">Mojito</button></a>
+                    <a href="./details.html?id=11000"><button type="submit">Mojito</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
                 <div class="team-card">
-                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
-                    <h3>Art van de Lay</h3>
-                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
-                        minutes
-                        to watch 60 Minutes.</p>
+                    <img src="./assets/img/member-jd.png" alt="Josh">
+                    <h3>Josh</h3>
+                    <p class="justify">If(stuckWithJavaScript) {<br>
+                        &emsp;&emsp;askJoshForHelp();<br>
+                    } else {<br>
+                        &emsp;&emsp;letJoshRest();<br>
+                    }</p>
                         <p class="p-bold">Favorite cocktail:</p>
-                    <a href="#"><button type="submit">Mojito</button></a>
+                    <a href="./details.html?id=11001"><button type="submit">Old Fashioned</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
                 <div class="team-card">
-                    <img src="./assets/img/placeholder-squirrel.jpg" alt="photo of team member Art van de Lay">
-                    <h3>Art van de Lay</h3>
-                    <p>Mission Impossible was originally set in Chuck Norris's house. It takes Chuck Norris 20
-                        minutes
-                        to watch 60 Minutes.</p>
+                    <img src="./assets/img/member-bw.jpg" alt="Brandon">
+                    <h3>Brandon</h3>
+                    <p class="justify">[02:37 AM] I found a typo!<br>
+                    [02:38 AM] Help! I broke the code...again!</p>
                         <p class="p-bold">Favorite cocktail:</p>
-                    <a href="#"><button type="submit">Mojito</button></a>
+                    <a href="./details.html?id=13070"><button type="submit">Fahrenheit 5000</button></a>
                     <!-- <a href=" LinkedIn "></a> -->
                 </div>
 
