#10 Hotfix - updated footer site-wide, added missing pg titles

--- a/browse.html
+++ b/browse.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <script src="./scripts/script.js" defer></script>
-    <title></title>
+    <title>Browse The Cocktail Cache</title>
 </head>
 
 <body>
@@ -87,6 +87,9 @@
             <p id="no-result-message"></p>
         </div>
     </main>
+        <footer>
+        <p><a href="./about.html">&#0169;2023 THE COCKTAIL CACHE. ALL RIGHTS RESERVED.</a></p>
+    </footer>
 </body>
 
 </html>
