--- a/details.html
+++ b/details.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
-    <title></title>
+    <title>The Cocktail Cache - Details</title>
 </head>
 
 <body>
@@ -64,6 +64,10 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <p><a href="./about.html">&#0169;2023 THE COCKTAIL CACHE. ALL RIGHTS RESERVED.</a></p>
+    </footer>
 
     <script src="./scripts/script.js"></script>
 </body>
