--- a/quiz.html
+++ b/quiz.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <link rel="stylesheet" href="./css/quiz.css">
-    <title></title>
+    <title>The Cocktail Cache Quiz</title>
 </head>
 
 <body>
@@ -58,6 +58,10 @@
           </form>
     </main>
     <script src="./scripts/script.js"></script>
+    <footer>
+        <p><a href="./about.html">&#0169;2023 THE COCKTAIL CACHE. ALL RIGHTS RESERVED.</a></p>
+    </footer>
+
 </body>
 
 </html>
