--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
         </section>
     </div>
     <footer>
-        <p class="p-small">THE COCKTAIL CACHE, EST. 2023</p>
+        <p><a href="./about.html">&#0169;2023 THE COCKTAIL CACHE. ALL RIGHTS RESERVED.</a></p>
     </footer>
     <script src="./scripts/script.js"></script>
 </body>
