#10 Hotfix - fixed sentence missed during proofreading

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <div class="content-wrapper">
         <main>
             <h2>About the Project</h2>
-            <p>The Cocktail Cache is a team-built website that uses HTML5, CSS3, and JS ES6. It utilizes data from the CocktailDB web API pulling information about various drinks, ingredients, and recipes from a third-party database, the CocktailDB API.</p>
+            <p>The Cocktail Cache is a team-built website that uses HTML5, CSS3, and JS ES6. It utilizes data from the CocktailDB web API including information about various drinks, ingredients, and recipes.</p>
 
         <section>
             <h2>Meet the Team</h2>
