Revert "More Minor tweaks (#46)"
This reverts commit aa8ebfe0e6df1fefef43617b8681ad7bae71133a.

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
                 </div>
 
                 <div class="team-card">
-                    <img src="./assets/img/member-cs.jfif" alt="Cristian">
-                    <h3>Cristian</h3>
+                    <img src="./assets/img/member-cs.jfif" alt="Cris">
+                    <h3>Cris</h3>
                     <p>&ldquo;What's next?&rdquo;</p>
                         <p class="p-bold">Favorite cocktail:</p>
                     <a href="./details.html?id=11000"><button type="submit">Mojito</button></a>
