index page bug fix

--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <a class="logo" href="./index.html">THE COCKTAIL CACHE</a>
+        <a class="logo" href="./">THE COCKTAIL CACHE</a>
         <p id="mobile-menu-btn">&#9776;</p>
         <nav>
             <div class="nav-link-container">
